# flowsdk

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  integration_test.sh  refactor.md  upgrade-main.txt
.clusterfuzzlite/: Dockerfile  README.md  build.sh  project.yaml
.github/: codecov.yml  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  clusterfuzzlite.yml  dependencies.yml  docs.yml  fuzzing.yml  integration-tests.yml  quick-check.yml  release.yml  release_pypi.yml
docs/: ASYNC_CLIENT.md  BUILDER_PATTERN.md  CONTRIBUTING.md  DEV.md  FUZZ_TESTING.md  MQTT_SESSION.md  PROTOCOL_COMPLIANCE.md  TEST.md  TODO.md  TOKIO_ASYNC_CLIENT_API_GUIDE.md  UNIFIED_CLIENT_CONSIDERATIONS.md  crates.js  help.html  search-index.js  settings.html  src-files.js
docs/flowsdk/: all.html  index.html  sidebar-items.js
docs/flowsdk_ffi/: all.html  index.html
docs/mqtt_ffi/: all.html  index.html
docs/mqtt_grpc_proxy/: all.html  enum.MqttConnectPacket.html  fn.convert_mqtt_to_stream_message.html  fn.convert_mqtt_to_stream_payload.html  fn.convert_stream_message_to_mqtt_packet.html  fn.convert_stream_payload_to_mqtt_bytes.html  index.html  sidebar-items.js
docs/mqtt_ring_bench/: all.html  fn.build_quic_crypto.html  fn.main.html  fn.print_banner.html  index.html  sidebar-items.js  struct.InsecureCertVerifier.html
docs/r_proxy/: all.html  fn.convert_mqtt_to_stream_payload.html  fn.convert_stream_payload_to_mqtt_bytes.html  fn.handle_new_incoming_tcp.html  fn.handle_new_streaming_conn.html  fn.handle_new_streaming_tcp_conn.html  fn.main.html  fn.run_proxy.html  fn.setup_grpc_connection.html  fn.setup_grpc_streaming.html  fn.signal_shutdown.html  fn.start_streaming_client_loop.html  fn.start_streaming_loop.html  fn.wait_for_mqtt_connect.html  fn.wait_for_shutdown_signal.html  index.html  sidebar-items.js  struct.RProxyState.html  struct.StreamingClientConnection.html
docs/s_proxy/: all.html  enum.BrokerControlMessage.html  fn.find_client_by_session.html  fn.forward_mqtt_packet_to_grpc.html  fn.main.html  fn.mqtt_client_loop.html  fn.mqtt_client_loop_simple.html  fn.mqtt_connect_to_broker.html  fn.signal_shutdown.html  index.html  sidebar-items.js  struct.MyRelay.html  type.ConnectionInfo.html
docs/search.index/: 0003f35b353f.js  000d5e99d2.js  000facb958f5.js  0011cb31da62.js  00125341b2.js  001b9de1713c.js  001f0f9b9bd4.js  0023993f4901.js  0028404d339b.js  003d8724aa99.js  005e502c38.js  00634543f4b3.js  0068bdc204f0.js  006fb3d4533f.js  0073f7ea82.js  0082baae1e5a.js  008621a3a1.js  008bb76a3709.js  009200e64e5b.js  00a5187854.js  00a6416e09c5.js  00b47ead128c.js  00b51c1eb7d3.js  00b5910fbe42.js  00c2202c76f3.js  00c310fedf.js  00c79df475.js  00c98e1b6c34.js  00d5146c1cc4.js  00d8d4c0e1f7.js  00dc7b2f22.js  00e370d9aa27.js  00ef4337a977.js  00f0a435b43e.js  00f3bf7220ed.js  00f529e8135a.js  010117145bfe.js  01039ff12520.js  01040607ce21.js  010f1d8205.js  (+5145 more)
docs/uniffi_bindgen/: all.html  fn.main.html  index.html
examples/: mqtt_client_builder_example.rs  mqtt_client_v3_example.rs  mqtt_client_v5.rs  mqtt_client_v5_example.rs  mqtt_v3_example.rs  no_io_mqtt_client_example.rs  no_io_mqtt_v3_connect_only_example.rs  no_io_quic_async_client_example.rs  no_io_quic_client.rs  no_io_quic_client_example.rs  no_io_quic_mqtt_engine_example.rs  no_io_quic_multi_stream_example.rs  no_io_tokio_quic_client_example.rs  quic_client_example.rs  tls_client.rs  tokio_async_mqtt_all_sync_operations.rs  tokio_async_mqtt_auth_example.rs  tokio_async_mqtt_client_example.rs  tokio_async_mqtt_priority_example.rs  tokio_async_mqtt_quic_example.rs  tokio_async_mqtt_tls_example.rs  tokio_async_mqtt_v3_client_example.rs
examples/c_ffi_example/: Makefile  main.c  quic_main.c  tls_main.c
flowsdk_ffi/: Cargo.toml
flowsdk_ffi/src/: engine.rs  lib.rs
flowsdk_ffi/src/engine/: ffi_types.rs
flowsdk_paho/: .gitignore  Cargo.toml  README.md
flowsdk_paho/include/: MQTTAsync.h  MQTTClient.h  MQTTProperties.h
flowsdk_paho/scripts/: check_symbols.sh  expected_symbols.txt  package.sh
flowsdk_paho/src/: lib.rs
flowsdk_paho/src/async_api/: callbacks.rs  connect_disconnect.rs  create_destroy.rs  mod.rs  send.rs  subscribe.rs  utility.rs
flowsdk_paho/src/common/: async_structs.rs  error_mapping.rs  mod.rs  properties.rs  return_codes.rs  structs.rs  uri_parser.rs
flowsdk_paho/src/inner/: client_state.rs  event_dispatch.rs  io_worker.rs  mod.rs  token_tracker.rs  transport.rs
flowsdk_paho/src/sync_api/: connect_disconnect.rs  create_destroy.rs  mod.rs  publish.rs  receive.rs  subscribe.rs  utility.rs
flowsdk_paho/tests/: Makefile  paho_async_smoke.c  paho_qos_smoke.c  paho_smoke.c  paho_tls_smoke.c  paho_v5_props_smoke.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_mqtt_packet_symmetric.rs  fuzz_parser_funs.rs
kotlin/: settings.gradle.kts
kotlin/package/: build.gradle.kts
mqtt_ffi/: Cargo.toml
mqtt_ffi/src/: engine.rs  lib.rs
mqtt_grpc_duality/: .gitignore  Cargo.toml  README.md  build.rs  run_integration_tests.sh
mqtt_grpc_duality/proto/: mqtt.proto  mqttv3.proto  mqttv5.proto
mqtt_grpc_duality/src/: lib.rs
mqtt_ring_bench/: Cargo.toml  README.md
mqtt_ring_bench/src/: config.rs  connection.rs  main.rs  stats.rs  worker_common.rs  worker_quic.rs  worker_tcp.rs
proto/: README.md  mqttv5.proto
proxy/: Cargo.toml  README.md  build.rs
proxy/src/: lib.rs
python/: MANIFEST.in  setup.py
python/examples/: README.md  async_example.py  (+10 more)
python/package/: MANIFEST.in  README.md  pyproject.toml
python/package/flowsdk/: __init__.py  async_client.py
python_bindings/: async_example.py  proper_async_client.py  test_binding.py
scripts/: build_kotlin_bindings.sh  build_python_bindings.sh  build_swift_bindings.sh  generate_coverage.sh  generate_coverage_integration.sh
src/: grpc_conversions.rs  lib.rs  priority_queue.rs
swift/: Package.swift  README.md
tests/: engine_logic_tests.rs  key_log_tests.rs  parser_tests.rs  reconnect_integration_tests.rs  timeout_tests.rs  transport_integration_tests.rs
(+1018 files in other folders)
