[package]
name = "flowsdk"
version = "0.4.2"
edition = "2021"
description = "Safety-first, realistic, behavior-predictable messaging SDK for MQTT and more."
license = "MPL-2.0"
repository = "https://github.com/emqx/flowsdk"
documentation = "https://docs.rs/flowsdk"
keywords = ["mqtt", "async", "tokio", "network", "mqtt_over_quic"]
categories = ["network-programming", "asynchronous"]

[workspace]
members = [".", "mqtt_grpc_duality", "flowsdk_ffi", "flowsdk_paho"]
exclude = ["fuzz", "release-small"]

[dependencies]
tonic = { version = "0.14.1", optional = true }
prost = { version = "0.14", optional = true }
tokio = { version = "1.0", features = ["sync", "time", "io-util"] }
tonic-prost = { version = "0.14.1", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
hex = "0.4"
bytes = { version = "1", features = ["serde"] }
tokio-stream = { version = "0.1", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
serde_json = "1.0"
slab = "0.4.11"
async-trait = "0.1"
thiserror = "1.0"
ctrlc = "3.4"

# TLS support (optional)
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

# QUIC support — mainstream quinn with ring crypto (regular builds)
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
quinn-proto = { version = "0.11", optional = true, default-features = false, features = ["rustls", "ring"] }
# QUIC support — OpenSSL crypto via fork (for release-small / size-optimised builds)
quinn-openssl = { package = "quinn", git = "https://github.com/qzhuyan/quinn.git", branch = "dev/william/ring-no-deps", optional = true, default-features = false, features = ["runtime-tokio", "rustls-openssl"] }
quinn-proto-openssl = { package = "quinn-proto", git = "https://github.com/qzhuyan/quinn.git", branch = "dev/william/ring-no-deps", optional = true, default-features = false, features = ["rustls-openssl"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
rustls-openssl = { version = "0.3", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pki-types = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[features]
default = ["strict-protocol-compliance", "tls", "async-client"]
# TLS/SSL transport support
tls = ["dep:tokio-native-tls", "dep:native-tls", "async-client"]
# QUIC transport support (mainstream quinn + ring crypto)
quic = ["quic-proto", "dep:quinn", "async-client"]
# QUIC transport support (OpenSSL backend via fork, for release-small builds)
# Implies quic so all #[cfg(feature = "quic")] gates activate; the fork is aliased
# over mainstream quinn via extern crate in lib.rs.  LTO strips unused mainstream
# quinn symbols from the final binary.
# NOTE: do not enable quic and quic-openssl at the same time.
quic-openssl = ["quic", "quic-proto-openssl", "dep:quinn-openssl"]
# Sans-I/O QUIC protocol engine — ring crypto (no tokio runtime required)
quic-proto = ["dep:quinn-proto", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pki-types"]
# Sans-I/O QUIC protocol engine — OpenSSL crypto (for release-small builds)
quic-proto-openssl = ["quic-proto", "dep:quinn-proto-openssl", "dep:rustls-openssl"]
# Rustls-based TLS over TCP (mqtts://) transport support
rustls-tls = [
	"dep:rustls",
	"dep:rustls-native-certs",
	"dep:rustls-pki-types",
	"dep:tokio-rustls",
	"async-client",
]
# Tokio-based async MQTT client (adds the high-throughput multi-threaded runtime)
async-client = [
	"tokio/macros",
	"tokio/rt-multi-thread",
	"tokio/net",
	"dep:tokio-stream",
]
# gRPC support (only needed for mqtt_grpc_duality proxy)
grpc = ["dep:tonic", "dep:prost", "dep:tonic-prost"]
strict-protocol-compliance = []
# ⚠️ DANGEROUS: Enable raw packet API for protocol compliance testing
# DO NOT enable in production builds
protocol-testing = []

# Force static linking of the C runtime
# usage: cargo build --target aarch64-unknown-linux-musl --examples --features quic
[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
[dev-dependencies]
futures = "0.3"

[[example]]
name = "no_io_quic_async_client_example"
required-features = ["quic"]

[[example]]
name = "no_io_quic_client_example"
required-features = ["quic"]

[[example]]
name = "no_io_tokio_quic_client_example"
required-features = ["quic"]

[[example]]
name = "tokio_async_mqtt_quic_example"
required-features = ["quic"]
