[package]
name = "flowsdk_ffi"
version = "0.4.2"
edition = "2021"
description = "FFI bindings for FlowSDK, allowing multi-language integration."
license = "MPL-2.0"
repository = "https://github.com/emqx/flowsdk"
documentation = "https://docs.rs/flowsdk_ffi"
keywords = ["ffi", "mqtt", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-bindings"]
[dependencies]
flowsdk = { path = "..", version = "0.4.1", default-features = false }
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
uniffi = { version = "0.28", features = ["cli"], optional = true }
uniffi_macros = { version = "0.28", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
quinn-proto = { version = "0.11", optional = true }
rustls-pki-types = { version = "1", optional = true }

[features]
default = ["tls", "quic", "uniffi-bindings"]
quic = ["tls", "flowsdk/quic-proto", "flowsdk/strict-protocol-compliance", "dep:quinn-proto"]
# Quiche-backed QUIC: system OpenSSL (dynamic), no vendored crypto code
quic-quiche = ["flowsdk/quic-quiche", "flowsdk/strict-protocol-compliance"]
tls = ["flowsdk/rustls-tls", "flowsdk/strict-protocol-compliance", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types"]
# UniFFI bindings for Kotlin/Python/Swift language bindings
uniffi-bindings = ["dep:uniffi", "dep:uniffi_macros"]
