[package]
name = "flowsdk_ffi"
version = "0.4.2"
edition = "2021"
description = "FFI bindings for FlowSDK, allowing multi-language integration."
license = "MPL-2.0"
repository = "https://github.com/emqx/flowsdk"
documentation = "https://docs.rs/flowsdk_ffi"
keywords = ["ffi", "mqtt", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-bindings"]

[dependencies]
flowsdk = { path = "..", version = "0.4.1", default-features = false }
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
uniffi = { version = "0.28", features = ["cli"], optional = true }
uniffi_macros = { version = "0.28", optional = true }
serde_json = { version = "1.0", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
rustls-openssl = { version = "0.3", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
quinn-proto = { version = "0.12", optional = true, default-features = false, features = ["rustls-openssl"] }
rustls-pki-types = { version = "1", optional = true }

[features]
default = ["tls", "quic", "uniffi-bindings"]
quic = [
	"flowsdk/quic-proto",
	"flowsdk/strict-protocol-compliance",
	"dep:quinn-proto",
	"dep:rustls",
	"dep:rustls-openssl",
	"dep:rustls-native-certs",
	"dep:rustls-pemfile",
	"dep:rustls-pki-types",
]
tls = ["flowsdk/rustls-tls", "flowsdk/strict-protocol-compliance", "dep:rustls", "dep:rustls-openssl", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types"]
# UniFFI bindings for Kotlin/Python/Swift language bindings
uniffi-bindings = ["dep:uniffi", "dep:uniffi_macros", "dep:serde", "dep:serde_json"]
