[package]
name = "mqtt-grpc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r-proxy"
path = "src/bin/r-proxy.rs"

[[bin]]
name = "s-proxy"
path = "src/bin/s-proxy.rs"

[dependencies]
# gRPC and async runtime
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.16"

# Networking and data structures
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3.20"

# Local dependencies - reference the parent workspace mqtt-serde
flowsdk = { path = "..", features = [] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[lib]
name = "mqtt_grpc_proxy"
path = "src/lib.rs"
