[package]
name = "mqtt-grpc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r-proxy"
path = "src/bin/r-proxy.rs"

[[bin]]
name = "s-proxy"
path = "src/bin/s-proxy.rs"

[dependencies]
# gRPC and async runtime
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Networking and data structures
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Local dependencies - reference the parent workspace mqtt-serde
mqtt-grpc-duality = { path = "..", features = [] }

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "mqtt_grpc_proxy"
path = "src/lib.rs"
