[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsdk"
version = "0.4.2"
description = "Python bindings for FlowSDK utilizing Uniffi"
readme = "README.md"
authors = [
    { name = "EMQ Technologies Co., Ltd.", email = "contact@emqx.io" }
]
license = { text = "MPL-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowsdk*"]
